--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -3,33 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <title>Информационная подсистема учета сделок с ценными бумагами</title>
-    <link rel="stylesheet" th:href="@{/styles.css}" />
+    <link rel="stylesheet" th:href="@{/style.css}" />
 </head>
 <body>
-<h1>Добро пожаловать...</h1>
-<img th:src="@{/images/demospring.png}"/>
+<div class="welcome-login">
+    <div class="welcome" sec:authorize="!isAuthenticated()">
+        <h1>Добро пожаловать!</h1>
+    </div>
+    <div sec:authorize="!isAuthenticated()">
+        <a href="/login" class="login-button">Войти в профиль</a>
+    </div>
+</div>
 
-<!-- Проверяем, аутентифицирован ли пользователь -->
-<li sec:authorize="isAuthenticated()">
-    <a href="javascript: document.logoutForm.submit()" class="main-button">Выйти</a>
-    <form name="logoutForm" th:action="@{/logout}" method="post" th:hidden="true">
+<div class="welcome" sec:authorize="isAuthenticated()">
+    <h1 th:text="'Добро пожаловать, ' + ${#authentication.principal.username} + '!'"></h1>
+</div>
+
+<div class="header">
+    <a href="/" class="home-link">Главная</a>
+<div class="main-buttons">
+    <a href="/deal/all">Сделки</a>
+    <a href="/type/all">Типы сделок</a>
+    <a href="/place/all">Места сделок</a>
+    <a href="/currency/all">Валюты</a>
+</div>
+    <a href="javascript: document.logoutForm.submit()" class="exit" sec:authorize="isAuthenticated()">Выйти</a>
+    <form name="logoutForm" th:action="@{/logout}" method="post" th:hidden="true" sec:authorize="isAuthenticated()">
         <input hidden type="submit" value="Sign Out" />
+        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
     </form>
-</li>
-
-<!-- Проверяем, не аутентифицирован ли пользователь -->
-<li sec:authorize="!isAuthenticated()">
-    <a href="/login" class="main-button">Войти</a>
-</li>
-
-<a href="/allTypes" class="main-button">Типы сделок</a>
-<a href="/deal/all" class="main-button">Сделки</a>
-
-<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
+</div>
 </body>
 </html>
-
-
-
-
 
