--- a/src/main/resources/templates/allDeals.html
+++ b/src/main/resources/templates/allDeals.html
@@ -72,6 +72,14 @@
     <span>© 2024 РИНХ. Все права защищены.</span>
     <span>ПИ-332 Рубанова Мария</span>
 </footer>
+<div id="confirmModal" class="modal">
+    <div class="modal-content">
+        <p>Вы уверены, что хотите удалить эту сделку?</p>
+        <button id="confirmYes">Да</button>
+        <button id="confirmNo">Нет</button>
+    </div>
+</div>
+<script src="@{/confirmation.js}" th:src="@{/confirmation.js}"></script>
 </body>
 </html>
 
