--- a/src/main/resources/templates/allPlaces.html
+++ b/src/main/resources/templates/allPlaces.html
@@ -51,7 +51,15 @@
     <span>© 2024 РИНХ. Все права защищены.</span>
     <span>ПИ-332 Рубанова Мария</span>
 </footer>
+<div id="confirmModal" class="modal">
+    <div class="modal-content">
+        <p>Вы уверены, что хотите удалить это место сделки?</p>
+        <button id="confirmYes">Да</button>
+        <button id="confirmNo">Нет</button>
+    </div>
+</div>
 <script src="@{/errorHandling.js}" th:src="@{/errorHandling.js}"></script>
+<script src="@{/confirmation.js}" th:src="@{/confirmation.js}"></script>
 </body>
 </html>
 
